--- a/assets/element.scss
+++ b/assets/element.scss
@@ -6,7 +6,7 @@ $--color-primary: #000000;
 $--color-primary-light-9: #252525;
 //$--color-primary-light-7: #252525;
 
-$--background-color-base: #282828;
+$--background-color-base: #12121b;
 
 $--color-white: #212121;
 //$--border-base: none;
@@ -31,7 +31,7 @@ $--button-primary-font-color: #1FC781; // green
 
 // INPUT
 $--input-font-color: #FFFFFF;
-$--input-background-color: #282828; // BG color
+$--input-background-color: #12121b; // BG color
 $--input-disabled-fill: #000000;
 $--input-hover-border: #a7b5ac;
 $--input-focus-border: #9eaba3;
@@ -65,18 +65,18 @@ $--radio-button-checked-border-color: transparent;
 // TABLE
 $--table-font-color: #d9d9d9;
 $--table-border-color: #3C3C43;
-$--table-border: 1px solid #282828;
-$--table-row-hover-background-color: #282828;
-$--table-current-row-background-color: #282828; 
+$--table-border: 1px solid #12121b;
+$--table-row-hover-background-color: #12121b;
+$--table-current-row-background-color: #12121b; 
 
 // SELECT
-$--select-dropdown-background: #282828;
+$--select-dropdown-background: #12121b;
 $--select-option-hover-background: #909399;
 $--select-option-selected-font-color: #ffffff;
 $--select-input-focus-border-color: #65676a;
 
 // POPOVER
-$--popover-background-color: #282828;
+$--popover-background-color: #12121b;
 
 // SWITCH
 $--switch-on-color: #909399;
@@ -159,7 +159,7 @@ DARK END */
   }
 
   // TABLE
-  .el-table {
-    background-color: #222222;
+  .el-table{
+    background-color: #12121b;
   }
 }
